2005-04-22 15:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.h: Added new method.
	* GormCore/GormDocument.m: Added implementation for
	changeToTopLevelEditorAcceptingTypes and changeToViewWithTag:.
	* GormCore/GormObjectEditor.m: Added code to call
	changeToTopLevelEditorAcceptingTypes: when a given type isn't
	accepted by this editor.
	* GormCore/GormResourceEditor.m: Added code to call 
	changeToTopLevelEditorAcceptingTypes: when a given type isn't
	accepted by this editor.

2005-04-22 12:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: [GormMenuEditor pasteInSelection]
	removed extra call to attachObject:withParent:.

2005-04-22 12:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: [GormMenuEditor pasteInSelection]
	corrected problem with pasting the menu items.  

2005-04-21 20:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Build the new resource manager.
	* GormCore/GormDocument.m: Register the new resource manager.
	* GormCore/GormViewResourceManager.m: New resource manager for views.
	* GormLib/IBResourceManager.m: Removed views for the main resource
	manager.

2005-04-21 00:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Fix for double "setView:" call.
	* GormCore/GormViewWindow.m: Code cleanup.

2005-04-20 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormObjectEditor.m: Added copyright information.
	* GormLib/IBResourceManager.m: Added exception handling to prevent
	a problem unarchiving an object from the pasteboard from crashing
	the app.

2005-04-20 21:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Restrict instantiation of NSView and
	subclasses using Command-Shift-I.  This means that standalone views
	can only be created from objects which are draggable from the palette.